Fixed overflow hidden issue with product list sections

--- a/src/styles/pages/PageRetail.css
+++ b/src/styles/pages/PageRetail.css
@@ -16,7 +16,8 @@
   margin: 32px auto;
   background: #BBBBBB;
   border: 2px #444444 solid;
-  border-radius: 8px
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .main-retail h4 {
